--- a/mDNIe/res/layout/activity_jni_gl.xml
+++ b/mDNIe/res/layout/activity_jni_gl.xml
@@ -13,40 +13,43 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
             android:background="#54545454"
             android:orientation="horizontal" >
 
             <Button
                 android:id="@+id/btn_imageload"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="button1" />
+                android:layout_height="fill_parent"
+                android:text="ImageLoad"
+                android:textSize="7sp" />
 
             <Button
                 android:id="@+id/btn_result"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="button2" />
+                android:layout_height="fill_parent"
+                android:text="Processing Result"
+                android:textSize="7sp" />
 
             <Button
                 android:id="@+id/btn_setting"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="button3" />
+                android:layout_height="fill_parent"
+                android:text="Algorithm Setting"
+                android:textSize="7sp" />
 
             <Button
                 android:id="@+id/btn_realtime_setting"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="button4" />
+                android:layout_height="fill_parent"
+                android:text="Realtime View"
+                android:textSize="7sp" />
 
             <Button
                 android:id="@+id/btn_viewmode"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="button5" />
+                android:layout_height="fill_parent"
+                android:text="View Mode"
+                android:textSize="7sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -56,7 +59,5 @@
             android:layout_weight="1"
             android:orientation="horizontal" />
     </LinearLayout>
-
-    
 
 </LinearLayout>
