--- a/mDNIe/res/layout/setting_page.xml
+++ b/mDNIe/res/layout/setting_page.xml
@@ -13,34 +13,36 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
             android:background="#54545454"
             android:orientation="horizontal" >
 
             <Button
                 android:id="@+id/btn_home"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="button1" />
+                android:layout_height="fill_parent"
+                android:text="Home" 
+                 android:textSize="10sp"/>
 
             <Button
                 android:id="@+id/btn_reset"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="button2" />
+                android:layout_height="fill_parent"
+                android:text="Reset"
+                android:textSize="10sp" />
 
             <Button
                 android:id="@+id/btn_algorithm"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="button3" />
+                android:layout_height="fill_parent"
+                android:text="Algorithm Setting" 
+                android:textSize="10sp"/>
 
             <Button
                 android:id="@+id/btn_parameter"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="button4" />
+                android:layout_height="fill_parent"
+                android:text="Parameter Setting" 
+                android:textSize="10sp"/>
 
 
         </LinearLayout>
