--- a/mDNIe/res/layout/item.xml
+++ b/mDNIe/res/layout/item.xml
@@ -5,13 +5,16 @@
 
     <ImageView
         android:id="@+id/imageview"
-        android:layout_width="60dp"
+        android:layout_width="10dp"
         android:layout_height="60dp" />
 
     <TextView
         android:id="@+id/textview"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textColor="#000000" />
+
+  
 
 </LinearLayout>
