--- a/mDNIe/res/layout/main_viemode_frag.xml
+++ b/mDNIe/res/layout/main_viemode_frag.xml
@@ -4,9 +4,23 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="fragment 5" />
+    <LinearLayout
+      android:layout_width="match_parent"
+   	 android:layout_height="match_parent"
+   	 android:orientation="vertical"  >
+
+        <ImageView
+            android:id="@+id/viewmode_prev"
+            android:layout_width="fill_parent"
+            android:layout_height= "fill_parent"
+            android:layout_weight="1" />
+
+        <ImageView
+            android:id="@+id/viewmode_result"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"  />
+        
+    </LinearLayout>
 
 </LinearLayout>
