double tap modify

--- a/mDNIe/res/layout/activity_jni_gl.xml
+++ b/mDNIe/res/layout/activity_jni_gl.xml
@@ -13,13 +13,14 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="#54545454"
+            android:background="#527394"
             android:orientation="horizontal" >
 
             <Button
                 android:id="@+id/btn_imageload"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
+                android:layout_weight="1"
                 android:text="ImageLoad"
                 android:textSize="7sp" />
 
