--- a/mDNIe/res/layout/activity_jni_gl.xml
+++ b/mDNIe/res/layout/activity_jni_gl.xml
@@ -1,64 +1,49 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<!--
+  Copyright 2013 The Android Open Source Project
+
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+  -->
+
+
+<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+     android:background = "#000000">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="#ffffffff"
-        android:orientation="vertical" >
+    <!-- As the main content view, the view below consumes the entire
+         space available using match_parent in both dimensions. -->
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" 
+         android:background="#000000" />
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="#527394"
-            android:orientation="horizontal" >
-
-            <Button
-                android:id="@+id/btn_imageload"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="ImageLoad"
-                android:textSize="7sp" />
-
-            <Button
-                android:id="@+id/btn_result"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:text="Processing Result"
-                android:textSize="7sp" />
-
-            <Button
-                android:id="@+id/btn_setting"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:text="Algorithm Setting"
-                android:textSize="7sp" />
-
-            <Button
-                android:id="@+id/btn_realtime_setting"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:text="Realtime View"
-                android:textSize="7sp" />
-
-            <Button
-                android:id="@+id/btn_viewmode"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:text="View Mode"
-                android:textSize="7sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_fragment_main"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal" />
-    </LinearLayout>
-
-</LinearLayout>
+    <!-- android:layout_gravity="start" tells DrawerLayout to treat
+         this as a sliding drawer on the left side for left-to-right
+         languages and on the right side for right-to-left languages.
+         The drawer is given a fixed width in dp and extends the full height of
+         the container. A solid background is used for contrast
+         with the content view. -->
+    <ListView
+        android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:background="#333333"/>
+</android.support.v4.widget.DrawerLayout>
