--- a/mDNIe/res/layout/main_imageload_frag.xml
+++ b/mDNIe/res/layout/main_imageload_frag.xml
@@ -7,7 +7,8 @@
     <ImageView
         android:id="@+id/imageview1"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        android:background="#000000" />
 
 
 
