--- a/mDNIe/res/layout/main_realtime_frag.xml
+++ b/mDNIe/res/layout/main_realtime_frag.xml
@@ -19,9 +19,9 @@
 
         <ImageView
             android:id="@id/handle"
-            android:layout_width="88dip"
-            android:layout_height="44dip"
-            android:src="@drawable/point" />
+            android:layout_width="44dip"
+            android:layout_height="22dip"
+            android:src="@drawable/slidingdrawer" />
 
         <LinearLayout
             android:id="@id/content"
