--- a/mDNIe/res/layout/main_result_frag.xml
+++ b/mDNIe/res/layout/main_result_frag.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -7,6 +7,30 @@
     <ImageView
         android:id="@+id/imageview2"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        android:background="#000000" />
 
-</LinearLayout>
+    <SlidingDrawer
+        android:id="@+id/result_drawer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:content="@+id/result_content"
+        android:handle="@+id/result_handle"
+        android:topOffset="200dip" >
+
+        <ImageView
+            android:id="@id/result_handle"
+          android:layout_width="44dip"
+            android:layout_height="22dip"
+            android:src="@drawable/slidingdrawer" />
+
+        <LinearLayout
+            android:id="@id/result_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="#44000000"
+            android:orientation="vertical" >
+        </LinearLayout>
+    </SlidingDrawer>
+
+</FrameLayout>
