--- a/mDNIe/res/layout/main_viemode_frag.xml
+++ b/mDNIe/res/layout/main_viemode_frag.xml
@@ -1,26 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
     <LinearLayout
-      android:layout_width="match_parent"
-   	 android:layout_height="match_parent"
-   	 android:orientation="vertical"  >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
         <ImageView
             android:id="@+id/viewmode_prev"
             android:layout_width="fill_parent"
-            android:layout_height= "fill_parent"
-            android:layout_weight="1" />
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:background="#000000" />
 
         <ImageView
             android:id="@+id/viewmode_result"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="1"  />
-        
+            android:layout_weight="1"
+            android:background="#000000" />
     </LinearLayout>
 
-</LinearLayout>
+    <SlidingDrawer
+        android:id="@+id/viewmode_drawer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:content="@+id/viewmode_content"
+        android:handle="@+id/viewmode_handle"
+        android:topOffset="200dip" >
+
+        <ImageView
+            android:id="@id/viewmode_handle"
+           android:layout_width="44dip"
+            android:layout_height="22dip"
+            android:src="@drawable/slidingdrawer" />
+
+        <LinearLayout
+            android:id="@id/viewmode_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="#44000000"
+            android:orientation="vertical" >
+        </LinearLayout>
+    </SlidingDrawer>
+
+</FrameLayout>
