--- a/mDNIe/res/values/styles.xml
+++ b/mDNIe/res/values/styles.xml
@@ -1,5 +1,9 @@
 <resources>
 
-    <style name="AppTheme" parent="android:Theme.Light" />
+    <!--
+        Base application theme for API 11+. This theme completely replaces
+        AppBaseTheme from res/values/styles.xml on API 11+ devices.
+    -->
+  
 
 </resources>
