--- a/res/layout/activity_jni_gl.xml
+++ b/res/layout/activity_jni_gl.xml
@@ -88,7 +88,9 @@
         android:layout_gravity="start"
         android:background="#333333"
         android:choiceMode="singleChoice"
+        android:clickable="true"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp" />
+
 
 </android.support.v4.widget.DrawerLayout>
